# OpenCV_Image

./: build.gradle
app/: build.gradle  proguard-rules.pro
app/jni/: Android.mk  CMakeLists.txt  native-lib.cpp  native-lib2.cpp
app/src/androidTest/java/com/yq/opencv_image/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yq/opencv_image/: BaseApplication.java  FaceDet.java  FileUtil.java  MainActivity.java  OpencvImageUtil.java  OpencvImageUtil2.java  OtherActivity.java
app/src/main/java/com/yq/opencv_image/bean/: VisionDetRet.java
app/src/main/java/com/yq/opencv_image/utils/: FileUtil.java  GlideOption.java
app/src/main/java/com/yq/opencv_image/widget/: XImageView.java
app/src/main/res/layout/: activity_main.xml  activity_other.xml
app/src/main/res/values/: attr.xml  strings.xml
app/src/main/res/xml/: provider_paths.xml
app/src/test/java/com/yq/opencv_image/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
